# dusk

./: .gitignore  Cargo.toml  FEATURES.md  README.md  TESTING.md
benches/: commands.rs
docs/: README.md  cat-bat.md  diff.md  dump.md  git.md  help.md  ls.md  mv-cp-ln.md  rm.md  themes.md  wrappers.md  xtree.md
scripts/: bench.sh  build-all.sh  coverage.sh
src/: app.rs  main.rs
src/commands/: cat.rs  diff.rs  git.rs  ls.rs  mod.rs  passthrough.rs  xtree.rs
src/commands/cat/: mod.rs
src/commands/cp/: mod.rs
src/commands/diff/: mod.rs
src/commands/dump/: mod.rs
src/commands/fsops/: mod.rs
src/commands/git/: diff_tui.rs  diffview.rs  mod.rs  tui.rs
src/commands/git/tui/: actions.rs  input.rs  mod.rs  render.rs
src/commands/ln/: mod.rs
src/commands/ls/: config.rs  mod.rs  output.rs  row.rs
src/commands/mv/: mod.rs
src/commands/passthrough/: mod.rs
src/commands/rm/: config.rs  help.rs  mod.rs  ops.rs  trash.rs  tui.rs
src/commands/themes/: mod.rs
src/commands/tree/: mod.rs
src/commands/xtree/: analysis.rs  config.rs  help.rs  ignore.rs  mod.rs  outputs.rs  render.rs
src/core/: devicons.rs  icons.rs  mod.rs  process.rs  style.rs  theme.rs
src/xtree/: config.rs  help.rs  icons.rs  mod.rs  render.rs  theme.rs
tests/: cli.rs
